# days-to-thing-tracker

./: .gitignore  Cargo.toml  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  setup.py  setup.sh
docker/: Dockerfile  tailscale-serve.json
docs/: pinout.md
documentation/: RASPBERRY_PI_DISPLAY.md  SERVER_ARCHITECTURE.md  pinouts.md
firmware/: Cargo.toml  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: config.rs  display.rs  dns.rs  encoder.rs  fonts.rs  http_server.rs  main.rs  microphone.rs  models.rs  renderer.rs  storage.rs  theme.rs  views.rs  voice.rs  wifi.rs
firmware/static/: index.html
prisma/: schema.prisma
prisma/migrations/20260106193128_init/: migration.sql
prisma/migrations/20260106194646_init/: migration.sql
prisma/migrations/20260106204935_add_completion_history/: migration.sql
product-site/: package-lock.json  package.json
product-site/src/app/: globals.css  layout.tsx  page.tsx
product-site/src/components/sections/: colors.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navigation.tsx  specs.tsx  use-cases.tsx
product-site/src/components/ui/: badge.tsx  button.tsx  card.tsx
public/: manifest.json
python/: api.py  config.py  database.py  main.py  models.py  requirements.txt  views.py
python/templates/: index.html
raspberry-pi-deployment/: 99-fbdev.conf  README.md  config.txt.additions  encoder.py  encoder.service  install.sh  kiosk.service  kiosk.sh
rust/kiosk-core/: Cargo.toml
rust/kiosk-core/src/: display.rs  encoder.rs  lib.rs  renderer.rs  theme.rs
server/: voice_server.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/tasks/: route.ts
src/app/api/tasks/[id]/: route.ts
src/app/api/tasks/[id]/complete/: route.ts
src/app/api/tasks/[id]/history/: route.ts
src/components/kiosk/: KioskActionMenu.tsx  KioskConfirmDialog.tsx  KioskHistoryView.tsx  KioskSettingsMenu.tsx  KioskTaskCard.tsx  KioskView.tsx  index.ts
src/components/tasks/: CountdownDisplay.tsx  HistoryModal.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx  TaskSection.tsx  UrgencyIndicator.tsx  index.ts
src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Select.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toast.tsx  index.ts
src/hooks/: useCountdown.ts  useKioskNavigation.ts  useTasks.ts
src/lib/: date-utils.ts  kiosk-settings.ts  prisma.ts
src/types/: index.ts
systemd/: kiosk-api.service  kiosk-tracker.service
