[package]
name = "kiosk-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core for Days Tracker kiosk display"

[lib]
name = "kiosk_core"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# GPIO for Raspberry Pi
rppal = "0.17"

# Framebuffer access
framebuffer = "0.3"

# Error handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
