[package]
name = "kiosk-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core for Days Tracker kiosk display"

[lib]
name = "kiosk_core"
crate-type = ["cdylib"]

[dependencies]
# Python bindings (0.22+ supports Python 3.13)
pyo3 = { version = "0.22", features = ["extension-module"] }

# GPIO for Raspberry Pi
rppal = "0.22"

# Framebuffer access
framebuffer = "0.3"

# Error handling
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
